# wraith

./: .gitignore  Cargo.toml  README.md
crates/wraith-cli/: Cargo.toml
crates/wraith-cli/src/: cargo_tools.rs  fallow.rs  hooks.rs  main.rs  migrate.rs  report_md.rs  watch.rs
crates/wraith-cli/tests/: integration.rs
crates/wraith-core/: Cargo.toml
crates/wraith-core/src/: analyze.rs  audit.rs  boundaries.rs  cache.rs  circular.rs  config.rs  dedupe.rs  diff_cluster.rs  dupes.rs  extract_shared.rs  fix.rs  graph.rs  health.rs  inline.rs  lib.rs  move_fn.rs  parse.rs  queries.rs  refactor.rs  refactor_shared.rs  rename.rs  report.rs  split_fn.rs  visibility.rs  workspace.rs
crates/wraith-lsp/: Cargo.toml  README.md
crates/wraith-lsp/src/: main.rs
crates/wraith-lsp/tests/: initialize.rs
crates/wraith-mcp/: Cargo.toml  README.md
crates/wraith-mcp/src/: main.rs
crates/wraith-mcp/tests/: list_tools.rs
examples/: wavelet-diff-report.md  wavelet-report.md
examples/small-test-crate/: .wraithrc.json  Cargo.toml
examples/small-test-crate/crate-a/: Cargo.toml
examples/small-test-crate/crate-a/src/: lib.rs
examples/small-test-crate/crate-b/: Cargo.toml
examples/small-test-crate/crate-b/src/: main.rs
skills/wraith/: SKILL.md
skills/wraith/rules/: diff-reports.md  monorepo.md  navigate.md  refactor.md
