[workspace]
resolver = "2"
members = [
    "crates/wraith-core",
    "crates/wraith-cli",
    "crates/wraith-lsp",
    "crates/wraith-mcp",
]
exclude = [
    "examples/small-test-crate",
    "vendor/fallow",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shinyobjectz-sh/workbooks.sh"

[workspace.dependencies]
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
cargo_metadata = "0.18"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
anyhow = "1"
thiserror = "1"
toml = "0.8"
ignore = "0.4"
petgraph = "0.6"
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }
quote = "1"
bincode = "1.3"
