[package]
name = "wraith-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
syn.workspace = true
proc-macro2.workspace = true
cargo_metadata.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
anyhow.workspace = true
thiserror.workspace = true
toml.workspace = true
ignore.workspace = true
petgraph.workspace = true
quote.workspace = true
bincode.workspace = true
