[package]
name = "wraith-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wraith-lsp"
path = "src/main.rs"

[dependencies]
wraith-core = { path = "../wraith-core" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "macros", "sync", "time"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"
